k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credentials-manager # Name of deployment
  namespace: ilmatty98 # Name of namespace
  labels:
    app: credentials-manager
spec:
  replicas: 1 # Number of replicas on pod
  selector:
    matchLabels:
      app: credentials-manager
  template:
    metadata:
      labels:
        app: credentials-manager
    spec:
      containers:
        - name: credentials-manager # Name of container
          image: ilmatty98/credentials-manager:1.1.0-SNAPSHOT9
          imagePullPolicy: Always
          ports:
            - containerPort: 80 # Port on which the container exposes the service
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "256Mi"
              cpu: "0.5"
