k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credentials-manager-service # Name of service
  namespace: ilmatty98 # Name of namespace
  labels:
    app: credentials-manager # Name of deployment
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 # Port on which the container exposes the service
  selector:
    app: credentials-manager # Name of deployment
  type: ClusterIP # Type of service
